--- a/templates/partials/search.html
+++ b/templates/partials/search.html
@@ -99,29 +99,18 @@
        <div class="pic-filter">
    
           <div class="pic-filter__slide showing">
-          <button class="pic-filter__button selected" data-filter="new">
-            <div class="pic-filter__btn-text">{{city}}</div>
-          </button>
-          <button class="pic-filter__button" data-filter="man">
-            <div class="pic-filter__btn-text">#야</div>
-          </button>
-          <button class="pic-filter__button" data-filter="wom">
-            <div class="pic-filter__btn-text">#야임마</div>
-          </button>
-          <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
-          </button>
-          <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱ</div>
-          </button>
-          <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱ</div>
-          </button>
-          <button class="pic-filter__button" data-filter="today">
-            <div class="pic-filter__btn-text">#ㄱㄱㄱㄱ</div>
-          </button>
+             {% for history in search %}
 
-         
+             {% if history.user == user %}
+        <!-- 사용자에게만 보여지는 리스트 아이템 -->
+              <button class="pic-filter__button selected" data-filter="new" data-query="{{ history.query }}">
+                      <div class="pic-filter__btn-text">
+                          {{ history.query }}
+                      </div>
+                    </button> 
+              {% endif %}
+              
+             {% endfor %}
           </div>
 
           <div class="pic-filter__slide">
