[Feat] fav리스트 html 수정

--- a/static/css/partials/work.css
+++ b/static/css/partials/work.css
@@ -202,11 +202,11 @@
   display: flex;
 }
 
-#topHeart {
+.topHeart {
   display: none;
   color: red;
 }
 
-#bottomHeart {
+.bottomHeart {
   display: block;
 }
