--- a/static/css/pic-list/pic-list.css
+++ b/static/css/pic-list/pic-list.css
@@ -343,3 +343,7 @@
 .pic__search-bar:focus ~ .pic__search-bar.active {
   transform: translate3d(-20%, 0px, 0px);
 }
+
+.work__icon .topHeart {
+  display: none;
+}
