--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -21,6 +21,10 @@
         <a href="{{user.get_absolute_url}}">Profile</a>
       </li>
 
+      <li class="navbar__menu__item">
+        <a href="{{user.get_absolute_url}}">Fav</a>
+      </li>
+
       {% else %}
       <li class="navbar__menu__item">
         <a href="{% url 'core:login' %}">Log in</a>
