--- a/templates/partials/search.html
+++ b/templates/partials/search.html
@@ -99,10 +99,12 @@
        <div class="pic-filter">
    
           <div class="pic-filter__slide showing">
+                 <div>내 검색어: </div>
              {% for history in search %}
 
              {% if history.user == user %}
         <!-- 사용자에게만 보여지는 리스트 아이템 -->
+   
               <button class="pic-filter__button selected" data-filter="new" data-query="{{ history.query }}">
                       <div class="pic-filter__btn-text">
                           {{ history.query }}
@@ -114,6 +116,7 @@
           </div>
 
           <div class="pic-filter__slide">
+
            <button class="pic-filter__button selected" data-filter="new">
             <div class="pic-filter__btn-text">#ㄴㄴ</div>
           </button>
@@ -192,7 +195,8 @@
 
 
          <div>
-         <form method="get" action="{% url 'core:search' %}" class="picture__search">
+              {% if user.is_authenticated %}
+         <form method="get" action="{% url 'core:search' %}" class="picture__search" >
            
             <div class="pic__search-box">
                 <input name="city" placeholder="" class="pic__search-bar " value="{{city}}" >
@@ -203,6 +207,7 @@
                 
             </div>
             <!-- 글 작성 버튼은 관리자만 보이도록 해주세요 -->
+                {% endif %}
         </form>
       </div>
 
