--- a/static/css/partials/work.css
+++ b/static/css/partials/work.css
@@ -209,3 +209,22 @@
 .bottomHeart {
   display: block;
 }
+.tag-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.tag {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 5px 15px;
+  margin: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.tag:hover {
+  background-color: #d8d8d8;
+}
