--- a/templates/partials/pic_list.html
+++ b/templates/partials/pic_list.html
@@ -105,43 +105,38 @@
          <div class="pic-filter__slide showing">
           <div class="pic-filter__sort">
            
-           <ul class="pic-filter__ul">
-              <i class="fas fa-sort"></i>
-              <li class="pic-filter__pop">인기검색어:
-                <ul class="dropdown">
-
-             {% for his in history %}
-
-             {% if his.user == user %}
+          <ul class="pic-filter__ul">
+ 
+ 
+    <ul class="dropdown">
+      {% for his in history %}
         <!-- 사용자에게만 보여지는 리스트 아이템 -->
-   
-              <button class="pic-filter__button " data-filter="new" data-query="{{ his.query }}">
-                      <div class="pic-filter__btn-text">
-                          {{ his.query }}
-                      </div>
-                    </button> 
-              {% endif %}
-              
-             {% endfor %}
+        <button class="pic-filter__button " data-filter="new" data-query="{{ his.query }}">
+          <div class="pic-filter__btn-text">
+            {{ his.query }}
+          </div>
+        </button> 
+      {% endfor %}
 
-<!-- 
-                  {% for his in history %}
+      <!-- 태그 버튼들 추가 -->
+      <div class="tag-buttons">
+        <button class="pic-filter__button tag" data-filter="love" data-query="사랑">
+          <div class="pic-filter__btn-text">사랑</div>
+        </button>
+        <button class="pic-filter__button tag" data-filter="happiness" data-query="행복">
+          <div class="pic-filter__btn-text">행복</div>
+        </button>
+        <button class="pic-filter__button tag" data-filter="healing" data-query="치유">
+          <div class="pic-filter__btn-text">치유</div>
+        </button>
+        <button class="pic-filter__button tag" data-filter="pain" data-query="고통">
+          <div class="pic-filter__btn-text">고통</div>
+        </button>
+      </div>
+    </ul>
+  </li>
+</ul>
 
-             {% if his.user == user %}
-        사용자에게만 보여지는 리스트 아이템
-   
-              <button class="pic-filter__button " data-filter="new" data-query="{{ his.query }}">
-                      <div class="pic-filter__btn-text">
-                          {{ his.query }}
-                      </div>
-                    </button> 
-              {% endif %}
-              
-             {% endfor %} -->
-                </ul>
-              </li>
-             
-            </ul>
           </div>
           </div>
            <button class="pic-filter__filterbtn">   
