--- a/static/css/home.css
+++ b/static/css/home.css
@@ -31,3 +31,26 @@
   background-color: white;
   color: black;
 }
+
+.home__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+  margin-top: 50px;
+}
+
+.home__avatar {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  margin-bottom: 20px;
+}
+
+.home__description {
+  font-size: 24px;
+  font-weight: bold;
+}
