--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,7 +9,7 @@
   --color-dark-grey: #4d4d4d;
   --color-grey: #616161;
   --color-light-grey: #7c7979;
-  --color-blue: #73aace;
+  --color-blue: # ;
   --color-yellow: #fff7d1;
   --color-orange: #feb546;
   --color-black: #000000;
